--- a/assets/css/unit-test.css
+++ b/assets/css/unit-test.css
@@ -838,9 +838,9 @@ a.button-regular:hover i::after {
   font-size: 22px;
   margin-top: 30px;
   margin-bottom: 30px;
-  color: #c3d2ff;
+  color: #fff;
   font-weight: 500;
-  background: var(--dark);
+  background: var(--color-secondary);
   padding: 80px 50px;
   font-style: italic;
   line-height: 1.7;
