--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4837,7 +4837,38 @@ ul.gallery-project-basic-info li:first-child {
   background-position: bottom;
   z-index: -1;
 }
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  max-width: 90%;
+  width: 400px; /* Adjust this width as needed */
+  text-align: center;
+}
+
+/* Style for the modal close button */
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
 /* ============================================================== 
     # Pricing
 =================================================================== */
